[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "franztls"
version = "0.1.2"
description = "Lightweight, open-source ACME client for automating TLS certificate issuance and renewal."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Alpamayo", email = "info@alpamayo-solutions.com" }]
dependencies = [
  "cryptography>=42.0",        
  "acme>=2.0",
  "josepy>=1.13.0",  
]

# These show up on PyPI
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/alpamayo-solutions/franztls"
Issues = "https://github.com/alpamayo-solutions/franztls/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "build>=1.2.1",
  "twine>=5.0.0",
]
